# EmbMessenger

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  codecov.yml  dir_001e35c2b26a73ace768d81db797e87c.html  dir_0128381db4b4f5acbef62e610c8688e8.html  dir_1f4c0d86beb0b38540f76a8999100119.html  dir_4f7b36fb0bfdfe16f35b59bd562960a4.html  dir_4f7e4242e27b8c8b476722507617a881.html  dir_650324dc50989ba0f6b331dc5d38898b.html  dir_820b2b9dd608784780e51ab49715a98b.html  dir_9982052f7ce695d12571567315b2fafa.html  dir_e839221b911be9ca1d4935be85bedea2.html  dir_ee436fe9bbd694a1f99c2ca92ae2568f.html  dir_f017f8d1aea2530cee9690020bbdf1df.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  library.json
d0/d0f/: classemb_1_1shared_1_1_reader.html
d0/d34/: classemb_1_1device_1_1_emb_messenger.html
d0/df8/: classemb_1_1host_1_1_message_id_invalid.html
d1/d2f/: _writer_8hpp_source.html
d1/d82/: classemb_1_1host_1_1_command.html
d1/dcd/: classemb_1_1host_1_1_out_of_periodic_command_slots.html
d2/d50/: classemb_1_1host_1_1_command_id_read_error.html
d2/d5f/: classemb_1_1shared_1_1_i_buffer.html
d2/d99/: classemb_1_1host_1_1_emb_messenger.html
d3/d09/: classemb_1_1host_1_1_extra_parameters.html
d3/d77/: classemb_1_1shared_1_1_i_buffer-members.html
d3/d7e/: classemb_1_1shared_1_1_writer.html
d4/d2e/: classemb_1_1host_1_1_debug_buffer-members.html
d5/dae/: _debug_buffer_8hpp_source.html
d5/dc2/: classemb_1_1host_1_1_unregistered_command.html
d6/d1c/: classemb_1_1host_1_1_debug_buffer.html
d6/d2a/: _data_error_8hpp.html  _data_error_8hpp_source.html
d6/d6d/: classemb_1_1host_1_1_crc_invalid.html
d6/d7a/: classemb_1_1host_1_1_initialization_error-members.html
d6/dc1/: classemb_1_1host_1_1_parameter_read_error.html
d6/dc3/: classemb_1_1host_1_1_crc_invalid-members.html
d7/db5/: host_2include_2_emb_messenger_2_emb_messenger_8hpp_source.html
d8/d9c/: classemb_1_1host_1_1_message_id_invalid-members.html
d8/de0/: classemb_1_1host_1_1_parameter_read_error-members.html
d8/df6/: classemb_1_1host_1_1_invalid_command_type_index-members.html
d9/d20/: _reader_8hpp_source.html
d9/df6/: classemb_1_1host_1_1_command-members.html
da/d2c/: classemb_1_1shared_1_1_writer-members.html
da/d6e/: classemb_1_1host_1_1_out_of_periodic_command_slots-members.html
da/dac/: device_2include_2_emb_messenger_2_emb_messenger_8hpp_source.html
da/dbe/: classemb_1_1host_1_1_message_id_read_error-members.html
da/dc0/: _command_8hpp_source.html
da/dfa/: classemb_1_1host_1_1_crc_read_error-members.html
db/d62/: _crc_8hpp_source.html
db/d93/: classemb_1_1device_1_1_emb_messenger-members.html
dc/d01/: classemb_1_1host_1_1_base_exception.html
dc/d25/: classemb_1_1host_1_1_base_exception-members.html
dc/d37/: classemb_1_1host_1_1_unregistered_command-members.html
dc/d51/: classemb_1_1host_1_1_command_id_read_error-members.html
dc/d54/: classemb_1_1host_1_1_message_id_read_error.html
dc/de0/: _i_buffer_8hpp_source.html
dc/dfc/: classemb_1_1host_1_1_parameter_invalid.html
dd/d3c/: classemb_1_1shared_1_1_reader-members.html
dd/d8f/: classemb_1_1host_1_1_extra_parameters-members.html
de/d24/: _exceptions_8hpp_source.html
de/d27/: classemb_1_1host_1_1_initialization_error.html
de/d2f/: classemb_1_1host_1_1_emb_messenger-members.html
de/d68/: classemb_1_1host_1_1_command_id_invalid-members.html
de/d6f/: classemb_1_1host_1_1_crc_read_error.html
de/ddb/: _data_type_8hpp.html  _data_type_8hpp_source.html
decoder/: CMakeLists.txt
decoder/src/: main.cpp
device/: CMakeLists.txt
device/include/EmbMessenger/: EmbMessenger.hpp  Templates.hpp
device/src/: EmbMessenger.cpp  EmbeddedMessenger.cpp
device/test/: EmbMessenger.cpp  FakeBuffer.cpp  FakeBuffer.hpp
df/d37/: classemb_1_1host_1_1_invalid_command_type_index.html
df/d8b/: classemb_1_1host_1_1_parameter_invalid-members.html
df/daa/: classemb_1_1host_1_1_command_id_invalid.html
examples/: CMakeLists.txt  platformio.ini
examples/device/: ArduinoBuffer.hpp  device.ino
examples/host/ext/serial/: CMakeLists.txt
examples/host/include/: Commands.hpp  HostBuffer.hpp
examples/host/src/: Commands.cpp  Main.cpp
ext/: CMakeLists.txt
host/: CMakeLists.txt
host/include/EmbMessenger/: Command.hpp  DebugBuffer.hpp  EmbMessenger.hpp  Exceptions.hpp
host/include/EmbeddedMessenger/: Command.hpp  EmbeddedMessenger.hpp
host/src/: Command.cpp  DebugBuffer.cpp  EmbMessenger.cpp
host/test/: Add.hpp  Command.cpp  EmbMessenger.cpp  EmbeddedMessenger.cpp  FakeBuffer.cpp  FakeBuffer.hpp  MockBuffer.hpp  Ping.hpp  SetLed.hpp  ToggleLed.hpp  UserError.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_d.js  search.js
shared/: CMakeLists.txt
shared/include/EmbMessenger/: Crc.hpp  DataError.hpp  DataType.hpp  IBuffer.hpp  Reader.hpp  Templates.hpp  Writer.hpp
shared/include/EmbeddedMessenger/: Crc.hpp  DataError.hpp  DataType.hpp  IBuffer.hpp  Reader.hpp  Templates.hpp  Writer.hpp
shared/src/: Crc.cpp  Reader.cpp  Writer.cpp
shared/test/: Crc.cpp  MockBuffer.hpp  Reader.cpp  Writer.cpp
travis/: after_script.sh  before_script.sh  script.sh
